# gauntlet

./: .env.local  .gitignore  CLAUDE.md  Makefile  README.md  cabal.project.freeze  fourmolu.yaml  gauntlet.cabal  hie.yaml  laughing-waffle.cabal  perf-testing.cabal
.github/workflows/: ci.yml
app/: Main.hs
docs/: USER_GUIDE.md
examples/: .secrets.template  README.md  ab-comparison.json  advanced-config.json  api-with-auth.json  comparison.json  load-modes.json  log-levels.json  minimal.json  simple-benchmark.json
schema/: config-schema.json
scripts/: plot_latency.py  pre-push
src/: Lib.hs  Log.hs  Runner.hs  VerifyRunner.hs
src/Benchmark/: Baseline.hs  CI.hs  CLI.hs  Compare.hs  Config.hs  Env.hs  Environment.hs  HTTP2.hs  Network.hs  Output.hs  Plotting.hs  RateLimiter.hs  Report.hs  Reporter.hs  TUI.hs  Types.hs  Validation.hs  Verify.hs
src/Benchmark/Config/: CLI.hs  Env.hs  Loader.hs
src/Benchmark/Execution/: Environment.hs  RateLimiter.hs  Validation.hs
src/Benchmark/Network/: Auth.hs  Exec.hs  Pool.hs  Request.hs
src/Benchmark/Report/: Baseline.hs  CI.hs  Formatting.hs  Markdown.hs  Output.hs
src/Benchmark/Reporter/: CI.hs  HTML.hs  JUnit.hs  Markdown.hs  Plot.hs  Prometheus.hs  Terminal.hs
src/Benchmark/TUI/: State.hs  Widgets.hs
src/Benchmark/Types/: Baseline.hs  Config.hs  Error.hs  Internal.hs  Response.hs  Stats.hs  Units.hs  Verify.hs
src/Runner/: Baseline.hs  Benchmark.hs  Context.hs  Loop.hs  Nway.hs  Tracing.hs  Warmup.hs
src/Stats/: Benchmark.hs  Common.hs
src/Tracing/: Analysis.hs  Client.hs  Query.hs  Report.hs  Types.hs
test/: AuthSpec.hs  BaselineSpec.hs  BayesianSpec.hs  BenchmarkIntegrationSpec.hs  BenchmarkRunnerSpec.hs  CISpec.hs  CLISpec.hs  ConfigSpec.hs  ContextSpec.hs  EnvSpec.hs  EnvironmentSpec.hs  ExecSpec.hs  FormattingSpec.hs  FrequentistSpec.hs  HTMLSpec.hs  Integration.hs  JUnitSpec.hs  LoadControlIntegrationSpec.hs  LogSpec.hs  LoopSpec.hs  MarkdownSpec.hs  MockServer.hs  NetworkSpec.hs  NwayIntegrationSpec.hs  NwaySpec.hs  OutputSpec.hs  PrometheusSpec.hs  PropertySpec.hs  RateLimiterSpec.hs  ReportSpec.hs  ReporterSpec.hs  RequestSpec.hs  RunnerBaselineSpec.hs  Spec.hs  StatsCommonSpec.hs  StatsSpec.hs  TUISpec.hs  TastyCompat.hs  TestHelpers.hs  TracingClientSpec.hs  (+9 more)
