cabal-version: 3.12
name:               gauntlet
version:            0.1.0.0
license:            NONE
author:             Real Limoges
maintainer:         b.real.limoges@gmail.com
build-type:         Simple


common warnings
    ghc-options: -Wall -O2

-- Define runtime options specifically for executables and tests
common rts-properties
    ghc-options:
        -threaded
        -rtsopts
        -with-rtsopts=-N
        -O2

library
  import:                 warnings
  hs-source-dirs:         src
  exposed-modules:        Lib
                          Log
                          Runner
                          Runner.Baseline
                          Runner.Context
                          Runner.Loop
                          Runner.Nway
                          Runner.Tracing
                          Runner.Warmup
                          VerifyRunner
                          Stats.Common
                          Stats.Benchmark
                          Benchmark.Baseline
                          Benchmark.CI
                          Benchmark.CLI
                          Benchmark.Config
                          Benchmark.Env
                          Benchmark.Environment
                          Benchmark.Network
                          Benchmark.Network.Auth
                          Benchmark.Network.Exec
                          Benchmark.Network.Pool
                          Benchmark.Network.Request
                          Benchmark.Output
                          Benchmark.Report
                          Benchmark.Report.Markdown
                          Benchmark.Types
                          Benchmark.Validation
                          Benchmark.Verify
                          Benchmark.TUI
                          Benchmark.TUI.State
                          Benchmark.TUI.Widgets
                          Tracing.Analysis
                          Tracing.Client
                          Tracing.Query
                          Tracing.Report
                          Tracing.Types

  default-extensions:     OverloadedStrings
                        , NumericUnderscores
                        , RecordWildCards
                        , DeriveAnyClass
                        , StrictData

  default-language:       GHC2024

  build-depends:          base >=4.20.0.0 && <5,
                          aeson,
                          async,
                          brick,
                          bytestring,
                          case-insensitive,
                          clock,
                          containers,
                          directory,
                          filepath,
                          http-client,
                          http-client-tls,
                          http-types,
                          math-functions,
                          optparse-applicative,
                          process,
                          statistics,
                          stm,
                          text,
                          time,
                          regex-tdfa,
                          scientific,
                          vector,
                          vector-algorithms,
                          vty,
                          vty-crossplatform

executable            gauntlet-exe
  import:             warnings
  default-language:   GHC2024
  main-is:            Main.hs
  hs-source-dirs:     app
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
  build-depends:      base >= 4.20.0.0,
                      gauntlet


test-suite            gauntlet-test
  import:             warnings, rts-properties
  type:               exitcode-stdio-1.0
  default-language:   GHC2024
  main-is:            Spec.hs
  hs-source-dirs:     test
  other-modules:      AuthSpec
                    , BaselineSpec
                    , CLISpec
                    , ContextSpec
                    , EnvSpec
                    , EnvironmentSpec
                    , NwayIntegrationSpec
                    , NwaySpec
                    , BayesianSpec
                    , CISpec
                    , ConfigSpec
                    , FrequentistSpec
                    , Integration
                    , LogSpec
                    , MarkdownSpec
                    , MockServer
                    , OutputSpec
                    , PropertySpec
                    , ReportSpec
                    , RunnerBaselineSpec
                    , StatsCommonSpec
                    , StatsSpec
                    , TestHelpers
                    , TracingClientSpec
                    , TracingQuerySpec
                    , TracingReportSpec
                    , TracingSpec
                    , TUISpec
                    , TypesJsonSpec
                    , TypesSpec
                    , ValidationSpec
                    , VerifySpec
                    , WarmupSpec
                    , TastyCompat
  default-extensions: OverloadedStrings
                    , NumericUnderscores
  build-depends:      base >= 4.20.0.0,
                      aeson,
                      async,
                      bytestring,
                      containers,
                      directory,
                      filepath,
                      tasty,
                      tasty-hunit,
                      tasty-quickcheck,
                      http-client,
                      http-client-tls,
                      http-types,
                      network,
                      optparse-applicative,
                      QuickCheck,
                      gauntlet,
                      scientific,
                      stm,
                      temporary,
                      text,
                      time,
                      vector,
                      wai,
                      warp
