cabal-version: 3.12
name:               gauntlet
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Real Limoges
maintainer:         b.real.limoges@gmail.com
build-type:         Simple
synopsis:           Statistically rigorous HTTP performance benchmarking
description:        HTTP benchmarking tool with Bayesian A/B analysis, distributed tracing, and CI/CD integration.
category:           Testing, Benchmarking


common warnings
    ghc-options: -Wall -O2

-- Define runtime options specifically for executables and tests
common rts-properties
    ghc-options:
        -threaded
        -rtsopts
        -with-rtsopts=-N
        -O2

library
  import:                 warnings
  hs-source-dirs:         src
  exposed-modules:        Lib
                          Log
                          Runner.Context
                          Runner.Loop
                          Runner.Benchmark
                          Runner.Warmup
                          Stats.Common
                          Stats.Benchmark
                          Benchmark.Config.CLI
                          Benchmark.Config.Env
                          Benchmark.Config.Loader
                          Benchmark.Execution.Environment
                          Benchmark.Execution.RateLimiter
                          Benchmark.Execution.Validation
                          Benchmark.Network
                          Benchmark.Network.Auth
                          Benchmark.Report
                          Benchmark.Report.Baseline
                          Benchmark.Report.CI
                          Benchmark.Report.Markdown
                          Benchmark.Report.Output
                          Benchmark.Compare
                          Benchmark.Report.Formatting
                          Benchmark.Reporter
                          Benchmark.Reporter.Markdown
                          Benchmark.Types
                          Benchmark.TUI.State
                          Benchmark.TUI.Widgets
                          Tracing.Client
                          Tracing.Report
                          Tracing.Types

  other-modules:          Runner
                          Runner.Tracing
                          Benchmark.Network.Exec
                          Benchmark.Network.Request
                          Benchmark.Reporter.CI
                          Benchmark.Reporter.Plot
                          Benchmark.Reporter.Terminal
                          Benchmark.TUI
                          Benchmark.Types.Baseline
                          Benchmark.Types.Config
                          Benchmark.Types.Error
                          Benchmark.Types.Internal
                          Benchmark.Types.Response
                          Benchmark.Types.Stats
                          Benchmark.Types.Units

  default-extensions:     OverloadedStrings
                        , NumericUnderscores
                        , RecordWildCards
                        , DeriveAnyClass
                        , StrictData

  default-language:       GHC2024

  build-depends:          base >=4.20.0.0 && <5,
                          aeson,
                          async,
                          bytestring,
                          case-insensitive,
                          clock,
                          containers,
                          directory,
                          filepath,
                          http-client,
                          http-client-tls,
                          http-types,
                          math-functions,
                          optparse-applicative,
                          process,
                          random,
                          statistics,
                          stm,
                          text,
                          time,
                          regex-tdfa,
                          scientific,
                          brick,
                          vty,
                          vty-crossplatform,
                          vector,
                          vector-algorithms,

executable            gauntlet-exe
  import:             warnings
  default-language:   GHC2024
  main-is:            Main.hs
  hs-source-dirs:     app
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
  build-depends:      base >= 4.20.0.0,
                      gauntlet


test-suite            gauntlet-test
  import:             warnings, rts-properties
  type:               exitcode-stdio-1.0
  default-language:   GHC2024
  main-is:            Spec.hs
  hs-source-dirs:     test
  other-modules:      AuthSpec
                    , BaselineSpec
                    , ExecSpec
                    , FormattingSpec
                    , LoopSpec
                    , TypesConfigSpec
                    , CLISpec
                    , ContextSpec
                    , EnvSpec
                    , EnvironmentSpec
                    , LoadControlIntegrationSpec
                    , BenchmarkIntegrationSpec
                    , BenchmarkRunnerSpec
                    , RateLimiterSpec
                    , BayesianSpec
                    , CISpec
                    , ConfigSpec
                    , Integration
                    , LogSpec
                    , MarkdownSpec
                    , MockServer
                    , OutputSpec
                    , PropertySpec
                    , ReportSpec
                    , ReporterSpec
                    , RequestSpec
                    , StatsCommonSpec
                    , StatsSpec
                    , TestHelpers
                    , TracingClientSpec
                    , TracingReportSpec
                    , TracingSpec
                    , TUISpec
                    , TypesJsonSpec
                    , TypesSpec
                    , ValidationSpec
                    , WarmupSpec
                    , TastyCompat
  default-extensions: OverloadedStrings
                    , NumericUnderscores
  build-depends:      base >= 4.20.0.0,
                      aeson,
                      async,
                      bytestring,
                      containers,
                      directory,
                      filepath,
                      tasty,
                      tasty-hunit,
                      tasty-quickcheck,
                      http-client,
                      http-client-tls,
                      http-types,
                      network,
                      optparse-applicative,
                      QuickCheck,
                      gauntlet,
                      scientific,
                      stm,
                      temporary,
                      text,
                      time,
                      vector,
                      wai,
                      warp
